--- a/numpy/site.cfg
+++ b/numpy/site.cfg
@@ -1,5 +1,5 @@
 [mkl]
-library_dirs = /opt/intel/composer_xe_2013_sp1/mkl/lib/mic
-include_dirs = /opt/intel/composer_xe_2013_sp1/mkl/include
+library_dirs = /opt/intel/compilers_and_libraries_2016.1.150/linux/mkl/lib/mic
+include_dirs = /opt/intel/compilers_and_libraries_2016.1.150/linux/mkl/include
 lapack_libs = mkl_intel_lp64,mkl_intel_thread,mkl_core
 mkl_libs = mkl_intel_lp64,mkl_intel_thread,mkl_core
